tests/files/parser_tests/should_fail/034.cmdr
//Should not parse due to unterminated call parentheses
add(1, 2;
